--- a/examples/gemini/index.html
+++ b/examples/gemini/index.html
@@ -22,7 +22,7 @@
 
       configureInputAI({
         api: {
-          url: `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-04-17:streamGenerateContent?alt=sse&key=${apiKey}`,
+          url: `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:streamGenerateContent?alt=sse&key=${apiKey}`,
           body: {
             "system_instruction": {
               "parts": {
