--- a/examples/default/index.html
+++ b/examples/default/index.html
@@ -9,7 +9,7 @@
 
   <!-- InputAI configuration -->
   <meta name="input-ai-url" content="http://localhost:3001/stream">
-  <meta name="input-ai-headers" content='{"X-CSRF-Token": "{{csrfmiddlewaretoken.value}}"}'>
+  <meta name="input-ai-headers" content='{"X-CSRFToken": "{{csrfmiddlewaretoken.value}}"}'>
   <meta name="input-ai-body"
     content='{"systemInstructions": "{{systemInstructions}}", "messages": "{{messages}}", "max_tokens": 100}'>
 
@@ -87,27 +87,14 @@
 </head>
 
 <body>
-  <h1>Product Rating Form</h1>
+  <h1>Order rating Form</h1>
 
   <form>
     <input type="hidden" name="csrfmiddlewaretoken" value="123456789abcdef">
 
     <div class="product-card">
-      <div class="product-title">Wireless Bluetooth Headphones</div>
-
       <label>
-        Category:
-        <select name="category">
-          <option value="">Select Category</option>
-          <option value="electronics">Electronics</option>
-          <option value="audio">Audio</option>
-          <option value="accessories">Accessories</option>
-          <option value="other">Other</option>
-        </select>
-      </label>
-
-      <label>
-        Your Review:
+        Order Review:
         <textarea name="review1" placeholder="Add your review here..." data-input-ai-modal-title="AI Writer"
           data-input-ai-prompt-placeholder="Ask AI to format your review"
           data-input-ai-system-instructions="You are a product review expert. User has chosen product category as {{category.value}}. Provide very consise and short review of the product based on these points and wrap it in <pre> tag: <points>{{review1.value}}</points>"
@@ -134,29 +121,6 @@
         <textarea name="review2" placeholder="Add your review here..." data-input-ai-modal-title="AI Writer"
           data-input-ai-prompt-placeholder="Ask AI to format your review"
           data-input-ai-system-instructions="You are a product review expert. User has chosen product usage frequency as {{usage.value}}. Provide very consise and short review of the product based on given points by user."
-          data-input-ai-response-expression="{{$join(candidates.content.parts.text)}}"></textarea>
-      </label>
-    </div>
-
-    <div class="product-card">
-      <div class="product-title">Fitness Tracker Watch</div>
-
-      <label>
-        Purchase Reason:
-        <select name="reason">
-          <option value="">Select Reason</option>
-          <option value="fitness">Fitness Tracking</option>
-          <option value="health">Health Monitoring</option>
-          <option value="gift">Gift</option>
-          <option value="other">Other</option>
-        </select>
-      </label>
-
-      <label>
-        Your Review:
-        <textarea name="review3" placeholder="Add your review here..." data-input-ai-modal-title="AI Writer"
-          data-input-ai-prompt-placeholder="Ask AI to format your review"
-          data-input-ai-system-instructions="You are a review expert. User has chosen product purchase reason as {{reason.value}}. Provide very consise and short review of the product based on given points by user."
           data-input-ai-response-expression="{{$join(candidates.content.parts.text)}}"></textarea>
       </label>
     </div>
